# FL_Banking

./: .gitignore  Feature_Engineering.ipynb  Global_Model.ipynb  Hyperparamter_Tuning.ipynb  Preprocessing.ipynb  READ.me  README.md  bank_preprocessing.ipynb  baseline_model.json  global_model.json  pyproject.toml  requirements.txt
FL_XGBoost/: __init__.py  client_app.py  data_partition.py  global_model.py  server_app.py  task.py
jupyter_notebook/: DataExploration.ipynb  Global_Model.ipynb  Local_Model.ipynb  bank_c_testing.ipynb  bank_preprocessing.ipynb
